# mcp-mysql

./: README.md  pyproject.toml
src/mcp_mysql/: __init__.py  config.py  server.py
