[project]
name = "mcp-mysql"
version = "0.1.0"
description = "Building a MySQL MCP Server from the DBA perspective"
authors = []
dependencies = [
    "mcp",
    "pydantic",
    "PyMySQL",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_mysql"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest",
    "black",
    "isort",
    "mypy",
]